; ModuleID = '/home/carl/AnghaBench/lwan/src/lib/extr_lwan-mod-lua.c_state_create.c'
source_filename = "/home/carl/AnghaBench/lwan/src/lib/extr_lwan-mod-lua.c_state_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cache_entry = type { i32 }
%struct.lwan_lua_priv = type { i32, i32 }
%struct.lwan_lua_state = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.cache_entry* (i8*, i8*)* @state_create to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.cache_entry* @state_create(i8* %0, i8* %1) #0 {
  %3 = alloca %struct.cache_entry*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.lwan_lua_priv*, align 8
  %7 = alloca %struct.lwan_lua_state*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = bitcast i8* %8 to %struct.lwan_lua_priv*
  store %struct.lwan_lua_priv* %9, %struct.lwan_lua_priv** %6, align 8
  %10 = call %struct.lwan_lua_state* @malloc(i32 4)
  store %struct.lwan_lua_state* %10, %struct.lwan_lua_state** %7, align 8
  %11 = load %struct.lwan_lua_state*, %struct.lwan_lua_state** %7, align 8
  %12 = icmp ne %struct.lwan_lua_state* %11, null
  %13 = xor i1 %12, true
  %14 = zext i1 %13 to i32
  %15 = call i64 @UNLIKELY(i32 %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %18

17:                                               ; preds = %2
  store %struct.cache_entry* null, %struct.cache_entry** %3, align 8
  br label %39

18:                                               ; preds = %2
  %19 = load %struct.lwan_lua_priv*, %struct.lwan_lua_priv** %6, align 8
  %20 = getelementptr inbounds %struct.lwan_lua_priv, %struct.lwan_lua_priv* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  %22 = load %struct.lwan_lua_priv*, %struct.lwan_lua_priv** %6, align 8
  %23 = getelementptr inbounds %struct.lwan_lua_priv, %struct.lwan_lua_priv* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @lwan_lua_create_state(i32 %21, i32 %24)
  %26 = load %struct.lwan_lua_state*, %struct.lwan_lua_state** %7, align 8
  %27 = getelementptr inbounds %struct.lwan_lua_state, %struct.lwan_lua_state* %26, i32 0, i32 0
  store i32 %25, i32* %27, align 4
  %28 = load %struct.lwan_lua_state*, %struct.lwan_lua_state** %7, align 8
  %29 = getelementptr inbounds %struct.lwan_lua_state, %struct.lwan_lua_state* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 4
  %31 = call i64 @LIKELY(i32 %30)
  %32 = icmp ne i64 %31, 0
  br i1 %32, label %33, label %36

33:                                               ; preds = %18
  %34 = load %struct.lwan_lua_state*, %struct.lwan_lua_state** %7, align 8
  %35 = bitcast %struct.lwan_lua_state* %34 to %struct.cache_entry*
  store %struct.cache_entry* %35, %struct.cache_entry** %3, align 8
  br label %39

36:                                               ; preds = %18
  %37 = load %struct.lwan_lua_state*, %struct.lwan_lua_state** %7, align 8
  %38 = call i32 @free(%struct.lwan_lua_state* %37)
  store %struct.cache_entry* null, %struct.cache_entry** %3, align 8
  br label %39

39:                                               ; preds = %36, %33, %17
  %40 = load %struct.cache_entry*, %struct.cache_entry** %3, align 8
  ret %struct.cache_entry* %40
}

declare dso_local %struct.lwan_lua_state* @malloc(i32) #1

declare dso_local i64 @UNLIKELY(i32) #1

declare dso_local i32 @lwan_lua_create_state(i32, i32) #1

declare dso_local i64 @LIKELY(i32) #1

declare dso_local i32 @free(%struct.lwan_lua_state*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
